src/index.css
:root {
  --white: white;
  --light-purple: rgb(238, 233, 249);
  --grayish-purple: #a892b3;
  --coffee-brown: #9F8170;
  --medium-brown: #745849;
  --taupe: #d6cfcc;
}

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  align-items: center;
}

header {
  padding: 0;
  margin: 10px;
  background-color: white;
  width: 100%;
  vertical-align: middle;
  display: flex;
  justify-content: space-between;
  position: -webkit-sticky;
}  

header nav {
  margin: 7px 0 0 100px;
  width: 100%;
  align-items: center;
}

header nav ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  list-style: none;
}

header ul li {
  display: inline-flex;
  flex-wrap: wrap;
  padding: 20px;
}

header ul li a {
  margin: 0;
  font-size: 18px;
  color: var(--medium-brown);
}

header ul li a:hover {
  text-decoration: none;
  color: var(--taupe);
}

i {
  padding-top: 20px;
  padding-bottom: 40px;
}
/* 
footer {
  text-align: center;
} */

.flex-container {
  display: inline-flex;
}

.logo {
  max-width: 250px;
  max-height: 150px;
  display: block;
  object-fit: contain;
  margin-top: 7px;
}

.announcements {
  background-color: var(--light-purple);
  display: center;
}

.announcement-container {
  text-align: center;
}

.announcement-banner a {
  color: black;
  text-decoration: underline;
}
.announcement-banner a:hover {
  color: var(--grayish-purple);
}

.hero {
  background-color: var(--taupe);
  width: 100%;
  vertical-align: middle;
  display: flex;
  justify-content: space-between;
  margin: 0 auto;
}

.option-container {
  margin: 60px;
  width: 100%;
  align-items: center;
}

.card {
  /* box-shadow: 2px 2px #6d5976; */
  font-size: 25px;
  padding: 20px;
  margin: 10px 20px;
  border-radius: 6px;
  border: none;
  min-width: 250px;
  min-height: 250px;
  vertical-align: middle;
  color: var(--white);
}

.card:hover {
  background-color: rgb(239, 236, 246);
}

.option-row {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  list-style: none;
  text-align: center;
}

/* hero a {
  color: var(--white);
} */

.title {
  padding-top: 10px;
  font-weight: bold;
  font-size: 20px;
  padding: 15px 10px;
}

.our-background {
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  background-color: var(--light-purple);
  text-align: left;
}

.background-section-title {
  margin: 20px 0 30px 0;
  text-align: center;
  font-size: 20px;
}

.background-title {
  /* font-weight: bold; */
  background-color: var(--white);
  color: var(--grayish-purple);
  margin: 30px 0;
  font-size: 20px;
  border-bottom: 6px solid var(--grayish-purple);
  display: inline;
  padding: 0 0 5px 0;
}

.bio-container {
  margin: 70px;
  background-color: var(--grayish-purple);
  color: var(--white);
  flex: 1;
  border-radius: 4px;
}

.bio-container img {
  width: 100%;
}

.section-title {
  margin: 15px 0 0 0;
}

.bio {
  padding: 25px;
  line-height: 1.3;
}

.bio h3 {
  font-size: 28px;
}

.bio p {
  font-size: 17px;
}

.find-us {
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  background-color: var(--grayish);
  color: var(--white);
  text-align: center;
  align-items: center;
}

.socials-title {
  background-color: var(--white);
  color: var(--medium-brown);
  margin: 20px 0;
  font-size: 20px;
  border-bottom: 6px solid var(--medium-brown);
  display: inline;
  padding: 0 0 5px 0;
}

.socials-container {
  padding: 0;
  align-items: center;
  width: 100%;
  background-color: var(--taupe);
}

.socials-container h3 {
  padding: 20px;
  font-size: 18px;
  display: center;
}

.socials-list {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  list-style: none;
  padding: 10px 30px 0px 30px;
}

/* .socials-container ul {
} */

.socials-container ul li {
  display: inline-flex;
  flex-wrap: wrap;
  padding: 20px;
}

.socials-container ul li a {
  margin: 0;
  font-weight: bold;
  font-size: 20px;
  color: var(--white);
  background-color: var(--medium-brown);
  padding: 15px;
  border-radius: 4px;
}

.socials-container ul li a:hover {
  text-decoration: none;
  color: var(--light-purple);
}

.about-page {
  background-color: var(--light-purple);
  color: var(--medium-brown);
}

.about-section {
  text-align: center;
  display: flex;
  flex-wrap: wrap;
  color: var(---medium-brown);
  margin: 20px;
}

.page-title {
  margin: 20px 0 30px 0;
  text-align: center;
  font-size: 18px;
}

.page-title h2 {
  color: var(--grayish-purple);
  padding-bottom: 30px;
  font-size: 25px;
}

#donation-option {
  background-color: var(--grayish-purple);
}

#donation-option i, #donation-option a {
  color: var(--light-purple);
}

#story-option {
  background-color: var(--light-purple);
}

#story-option i, #story-option a {
  color: var(--medium-brown);
}

#mailing-option {
  background-color: var(--medium-brown);
}

#mailing-option i, #mailing-option a {
  color: var(--white);
}

/* #resource-option i, #resource-option a {
  color: var(--light-purple);
} */

#social-header {
  padding-top: 10px;
  font-size: 20px;
  color: white;
  border-bottom: 7px solid white;
}

#contact {
  margin: 50px 30px 30px 30px;
}

